--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -12,3 +12,13 @@ body {
 button {
   font-family: var(--sans-serif);
 }
+
+.headerTitle {
+border-bottom-left-radius: 100%5rem;
+border-bottom-right-radius: 100%5rem;
+/*height: 10rem;
+text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;*/
+}
