--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -10,7 +10,7 @@
 
 :root {
 
-  --sans-serif: 'roboto mono', 'helvetica neue', helvetica, arial;
+  --sans-serif: 'Quicksand', 'helvetica neue', helvetica, arial;
   --serif: georgia, serif;
   --handwriting: Caveat;
   --code: consolas, monaco, monospace;
