--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -32,3 +32,10 @@ border-bottom-right-radius: 100%5rem;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.grid-4 {
+  display: grid;
+  grid-template-columns: 49% 49%;
+  grid-template-rows: 3rem 3rem;
+  grid-gap: 10px;
+}
