styling to personality relates #26

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -32,3 +32,8 @@ border-bottom-right-radius: 100%5rem;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+input:checked +  .personality {
+  background-color: #003388;
+  color: white;
+}
