adds styling to sliders needs to have colour gradient added related #30

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -32,3 +32,18 @@ border-bottom-right-radius: 100%5rem;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.slider::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  background-color: white;
+  border-width: 0.75px;
+  border-style: solid;
+  border-color: #aaa;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+
+.h-custom{
+  height: 0.5rem;
+}
