Mocked up video page #34, goes to location page

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -32,3 +32,17 @@ border-bottom-right-radius: 100%5rem;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.camera {
+  background: url('./assets/camera.svg');
+  background-repeat: no-repeat;
+  width: 8rem;
+  height: 8rem;
+  background-position: center;
+  background-size: 100%;
+}
+
+.videoButton {
+  width: 15rem;
+  height: 15rem;
+}
