Renamed newhome view to NewHomePage, removed likesPage #6

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -44,12 +44,14 @@ border-bottom-right-radius: 100%5rem;
   border-radius: 50%;
 }
 
-.h-custom{
+.h-custom {
   height: 0.5rem;
+}
 
 input:checked +  .personality {
   background-color: #003388;
   color: white;
+}
 
 .camera {
   background: url('./assets/camera.svg');
@@ -78,4 +80,3 @@ input:checked +  .personality {
   background-repeat: no-repeat;
   background-position: center;
 }
-
