--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -59,6 +59,10 @@ input:checked + .health {
   color: white;
 }
 
+input:checked + .age {
+  background-color: #003388;
+  color: white;
+}
 
 .camera {
   background: url('./assets/camera.svg');
@@ -92,5 +96,5 @@ input:checked + .health {
   border-width: 0.5px;
   border-style: solid;
   border-color: #6666;
-  
+
 }
