--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -42,6 +42,10 @@ border-bottom-right-radius: 100%5rem;
   width: 25px;
   height: 25px;
   border-radius: 50%;
+  background-image: url('./assets/dog-paw.png');
+  background-size: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .h-custom {
