--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -134,3 +134,20 @@ input:checked + .age {
 .vh-90{
   height:90vh;
 }
+
+
+.background-dog{
+   background-image: url("./assets/doggo.png");
+   background-size: cover !important;
+   width: 100%;
+   height: 90vh;
+}
+
+.background-overlay{
+  background-color: rgba(0, 51, 136, 0.5);
+  background-size: cover !important;
+  position: absolute;
+  z-index: 100;
+  height: 90vh;
+  width:100%;
+}
