--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -160,5 +160,9 @@ background-position: center;
 }
 
 .margin-minus{
-  margin-top: -4rem;
+  margin-top: -3rem;
+}
+
+.vh-40-ns{
+  height: 40vh;
 }
