Added slightly better default styling for email, improved regex in ut2string, Added default options to dropdowns #80 #54 #55

--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -1,32 +1,32 @@
 <p>Hi, {{name}}!</p>
 <h2>Someone has requested for Blue Cross to rehome their dog. </h2>
 <p>The dog, {{petName}}, has the following characteristics:</p>
-<ul>
-  <p>imageUrls: </p>{{#each imageUrls}} <span>{{this}}, </span>{{/each}}
-  <p>urgency: </p>{{urgency}}
-  <p>petName: </p>{{petName}}
-  <p>crossBreed: </p>{{crossBreed}}
-  <p>primaryBreedType: </p>{{primaryBreedType}}
-  <p>secondaryBreedType: </p>{{secondaryBreedType}}
-  <p>primaryReasonForRehoming: </p>{{primaryReasonForRehoming}}
-  <p>secondaryReasonForRehoming: </p>{{secondaryReasonForRehoming}}
-  <p>otherReasonsForRehoming: </p>{{otherReasonsForRehoming}}
-  <p>dogGender: </p>{{dogGender}}
-  <p>dogAge: </p>{{dogAge}}
-  <p>medicalDetails: </p>{{#each medicalDetails}}<span>{{this}}, </span>{{/each}}
-  <p>lastVetVisit: </p>{{lastVetVisit}}
-  <p>otherHealthNotes: </p>{{otherHealthNotes}}
-  <p>personalityTraits: </p>{{#each personalityTraits}}<span>{{this}}, </span>{{/each}}
-  <p>otherPersonalityNotes: </p>{{otherPersonalityNotes}}
-  <p>Likes cats: </p>{{cats}}%
-  <p>Likes children: </p>{{children}}%
-  <p>Likes people: </p>{{people}}%
-  <p>Likes dogs: </p>{{dogs}}%
-  <p>Likes babies: </p>{{babies}}%
-  <p>otherNotes: </p>{{otherNotes}}
-  <p>supportType: </p>{{#each supportType}}<span>{{this}}</span>{{/each}}
-  <p>ownerName: </p>{{ownerName}}
-  <p>ownerPhone: </p>{{ownerPhone}}
-  <p>alternativeOwnerPhone: </p>{{alternativeOwnerPhone}}
-  <p>bestTimeToCall: </p>{{bestTimeToCall}}
-  <p>email: </p>{{email}}
+  <p><span style="font-weight: bold;">imageUrls: </span>{{#each imageUrls}} <span>{{this}}, </span>{{/each}}</p>
+  <p><span style="font-weight: bold;">images : </span> {{#each imageUrls}} <img src="{{this}}" />{{/each}}</p>
+  <p><span style="font-weight: bold;">urgency: </span>{{urgency}}</p>
+  <p><span style="font-weight: bold;">petName: </span>{{petName}}</p>
+  <p><span style="font-weight: bold;">crossBreed: </span>{{crossBreed}}</p>
+  <p><span style="font-weight: bold;">primaryBreedType: </span>{{primaryBreedType}}</p>
+  <p><span style="font-weight: bold;">secondaryBreedType: </span>{{secondaryBreedType}}</p>
+  <p><span style="font-weight: bold;">primaryReasonForRehoming: </span>{{primaryReasonForRehoming}}</p>
+  <p><span style="font-weight: bold;">secondaryReasonForRehoming: </span>{{secondaryReasonForRehoming}}</p>
+  <p><span style="font-weight: bold;">otherReasonsForRehoming: </span>{{otherReasonsForRehoming}}</p>
+  <p><span style="font-weight: bold;">dogGender: </span>{{dogGender}}</p>
+  <p><span style="font-weight: bold;">dogAge: </span>{{dogAge}}</p>
+  <p><span style="font-weight: bold;">medicalDetails: </span>{{#each medicalDetails}}<span>{{this}}, </span>{{/each}}</p>
+  <p><span style="font-weight: bold;">lastVetVisit: </span>{{lastVetVisit}}</p>
+  <p><span style="font-weight: bold;">otherHealthNotes: </span>{{otherHealthNotes}}</p>
+  <p><span style="font-weight: bold;">personalityTraits: </span>{{#each personalityTraits}}<span>{{this}}, </span>{{/each}}</p>
+  <p><span style="font-weight: bold;">otherPersonalityNotes: </span>{{otherPersonalityNotes}}</p>
+  <p><span style="font-weight: bold;">Likes cats: </span>{{cats}}%</p>
+  <p><span style="font-weight: bold;">Likes children: </span>{{children}}%</p>
+  <p><span style="font-weight: bold;">Likes people: </span>{{people}}%</p>
+  <p><span style="font-weight: bold;">Likes dogs: </span>{{dogs}}%</p>
+  <p><span style="font-weight: bold;">Likes babies: </span>{{babies}}%</p>
+  <p><span style="font-weight: bold;">otherNotes: </span>{{otherNotes}}</p>
+  <p><span style="font-weight: bold;">supportType: </span>{{#each supportType}}<span>{{this}}</span>{{/each}}</p>
+  <p><span style="font-weight: bold;">ownerName: </span>{{ownerName}}</p>
+  <p><span style="font-weight: bold;">ownerPhone: </span>{{ownerPhone}}</p>
+  <p><span style="font-weight: bold;">alternativeOwnerPhone: </span>{{alternativeOwnerPhone}}</p>
+  <p><span style="font-weight: bold;">bestTimeToCall: </span>{{bestTimeToCall}}</p>
+  <p><span style="font-weight: bold;">email: </span>{{email}}</p>
