adds styling to email to user;

--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -38,7 +38,7 @@
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Photos</h3>
   <!-- <p><span style="font-weight: bold;">imageUrls: </span>{{#each imageUrls}} <span>{{this}}, </span>{{/each}}</p> -->
   <p><span style="font-weight: bold;">images :</span> </p>
-  {{#each imageUrls}}<a href="{{this}}"><p> <img  style="width:40%; height:auto; display:inline-block; margin: 1rem; border-radius:5px;" src="{{this}}"  />{{/each}}</p></a>
+  {{#each imageUrls}}<a href="{{this}}"><p style="display:inline;"> <img  style="width:40%; height:auto; display:inline-block; margin: 1rem; border-radius:5px;" src="{{this}}"  />{{/each}}</p></a>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Finding a home</h3>
   <p><span style="font-weight: bold;">Support required: </span>{{#each supportType}}<span>{{this}}</span>{{/each}}</p>
