--- a/src/email/templates/external-confirmation.html
+++ b/src/email/templates/external-confirmation.html
@@ -1,10 +1,11 @@
-<section style="background-color:#E1F4FB; padding: 1rem;">
-  <article style="width:80%; background-color:white; margin: 0 auto; padding: 2rem 3rem;">
-    <h1>Thank you, {{ownerName}}</h1>
-    <h2>We've safely received {{petName}}'s details</h2>
+<section style="background-color:#E1F4FB; padding: 1rem; ">
+  <article style="width:80%; ; color:#444444; background-color:white; margin: 0 auto; padding: 2rem 3rem;">
+    <img  style="width:25%;" src="https://cached.imagescaler.hbpl.co.uk/resize/scaleWidth/580/cached.offlinehbpl.hbpl.co.uk/news/NST/0BE880C4-BA15-C64D-59772E764EF971CE.jpg" alt="Blue Cross logo">
+    <h1 style="font-size:3rem;">Thank you, {{ownerName}}!</h1>
+    <h2 style="font-size:2rem;">We've safely received {{petName}}'s details</h2>
 
     <p>We'll now work hard to find a new home for {{petName}} and will be in touch within 2 days.</p>
 
-    {{#each imageUrls}}<a href="{{this}}"><p> <img  style="width:40%; height:auto; display:inline-block; margin: 1rem; border-radius:5px;" src="{{this}}"  />{{/each}}</p></a>
+    <div >{{#each imageUrls}}<a href="{{this}}"><p style="display:inline;"> <img style="width:35%; height:auto;  margin: 1rem; border-radius:5px;" src="{{this}}"  />{{/each}}</p></a></div>
   </article>
 </section>
