--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -9,7 +9,6 @@
 @custom-media --breakpoint-large screen and (min-width: 60em);
 
 :root {
-
   --sans-serif: 'Quicksand', 'helvetica neue', helvetica, arial;
   --serif: georgia, serif;
   --handwriting: Caveat;
@@ -25,9 +24,9 @@
   --font-size-6: 0.8rem;
   --font-size-7: 0.5rem;
 
-  --letter-spacing-tight:-.05em;
-  --letter-spacing-1:.1em;
-  --letter-spacing-2:.25em;
+  --letter-spacing-tight: -0.05em;
+  --letter-spacing-1: 0.1em;
+  --letter-spacing-2: 0.25em;
 
   --line-height-solid: 1;
   --line-height-title: 1.25;
@@ -38,8 +37,8 @@
   --measure-wide: 34em;
 
   --spacing-none: 0;
-  --spacing-extra-small: .25rem;
-  --spacing-small: .5rem;
+  --spacing-extra-small: 0.25rem;
+  --spacing-small: 0.5rem;
   --spacing-medium: 1rem;
   --spacing-large: 2rem;
   --spacing-extra-large: 4rem;
@@ -69,92 +68,92 @@
   --max-width-9: 96rem;
 
   --border-radius-none: 0;
-  --border-radius-1: .125rem;
-  --border-radius-2: .25rem;
-  --border-radius-3: .5rem;
+  --border-radius-1: 0.125rem;
+  --border-radius-2: 0.25rem;
+  --border-radius-3: 0.5rem;
   --border-radius-4: 1rem;
   --border-radius-circle: 100%;
   --border-radius-pill: 9999px;
 
   --border-width-none: 0;
-  --border-width-1: .1rem;
-  --border-width-2: .18rem;
-  --border-width-3: .5rem;
+  --border-width-1: 0.1rem;
+  --border-width-2: 0.18rem;
+  --border-width-3: 0.5rem;
   --border-width-4: 1rem;
   --border-width-5: 2rem;
 
-  --box-shadow-1: 0px 0px 4px 2px rgba( 0, 0, 0, 0.2 );
-  --box-shadow-2: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 );
-  --box-shadow-3: 2px 2px 4px 2px rgba( 0, 0, 0, 0.2 );
-  --box-shadow-4: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 );
-  --box-shadow-5: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 );
+  --box-shadow-1: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
+  --box-shadow-2: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+  --box-shadow-3: 2px 2px 4px 2px rgba(0, 0, 0, 0.2);
+  --box-shadow-4: 2px 2px 8px 0px rgba(0, 0, 0, 0.2);
+  --box-shadow-5: 4px 4px 8px 0px rgba(0, 0, 0, 0.2);
 
   /* Blue X Colours */
 
-  --navy:  #003388;
-  --dark-blue:  #0066BB;
-  --blue:  #069FDD;
-  --light-blue:  #E1F4FB;
+  --navy: #003388;
+  --dark-blue: #0066bb;
+  --blue: #069fdd;
+  --light-blue: #e1f4fb;
   --gray: #666666;
-  --silver: #F6F6F6;
+  --silver: #f6f6f6;
 
   --black: #000;
   --near-black: #111;
-  --dark-gray:#333;
-  --mid-gray:#555;
+  --dark-gray: #333;
+  --mid-gray: #555;
   --light-silver: #aaa;
   --moon-gray: #ccc;
   --light-gray: #eee;
   --near-white: #f4f4f4;
   --white: #fff;
 
-  --transparent:transparent;
+  --transparent: transparent;
 
- --black-90: rgba(0,0,0,.9);
- --black-80: rgba(0,0,0,.8);
- --black-70: rgba(0,0,0,.7);
- --black-60: rgba(0,0,0,.6);
- --black-50: rgba(0,0,0,.5);
- --black-40: rgba(0,0,0,.4);
- --black-30: rgba(0,0,0,.3);
- --black-20: rgba(0,0,0,.2);
- --black-10: rgba(0,0,0,.1);
- --black-05: rgba(0,0,0,.05);
- --black-025: rgba(0,0,0,.025);
- --black-0125: rgba(0,0,0,.0125);
+  --black-90: rgba(0, 0, 0, 0.9);
+  --black-80: rgba(0, 0, 0, 0.8);
+  --black-70: rgba(0, 0, 0, 0.7);
+  --black-60: rgba(0, 0, 0, 0.6);
+  --black-50: rgba(0, 0, 0, 0.5);
+  --black-40: rgba(0, 0, 0, 0.4);
+  --black-30: rgba(0, 0, 0, 0.3);
+  --black-20: rgba(0, 0, 0, 0.2);
+  --black-10: rgba(0, 0, 0, 0.1);
+  --black-05: rgba(0, 0, 0, 0.05);
+  --black-025: rgba(0, 0, 0, 0.025);
+  --black-0125: rgba(0, 0, 0, 0.0125);
 
- --white-90: rgba(255,255,255,.9);
- --white-80: rgba(255,255,255,.8);
- --white-70: rgba(255,255,255,.7);
- --white-60: rgba(255,255,255,.6);
- --white-50: rgba(255,255,255,.5);
- --white-40: rgba(255,255,255,.4);
- --white-30: rgba(255,255,255,.3);
- --white-20: rgba(255,255,255,.2);
- --white-10: rgba(255,255,255,.1);
- --white-05: rgba(255,255,255,.05);
- --white-025: rgba(255,255,255,.025);
- --white-0125: rgba(255,255,255,.0125);
+  --white-90: rgba(255, 255, 255, 0.9);
+  --white-80: rgba(255, 255, 255, 0.8);
+  --white-70: rgba(255, 255, 255, 0.7);
+  --white-60: rgba(255, 255, 255, 0.6);
+  --white-50: rgba(255, 255, 255, 0.5);
+  --white-40: rgba(255, 255, 255, 0.4);
+  --white-30: rgba(255, 255, 255, 0.3);
+  --white-20: rgba(255, 255, 255, 0.2);
+  --white-10: rgba(255, 255, 255, 0.1);
+  --white-05: rgba(255, 255, 255, 0.05);
+  --white-025: rgba(255, 255, 255, 0.025);
+  --white-0125: rgba(255, 255, 255, 0.0125);
 
-  --dark-red:  #e7040f;
-  --red:  #ff4136;
-  --light-red:  #ff725c;
-  --orange:  #D05E25;
-  --gold:  #ffb700;
-  --yellow:  #ffd700;
-  --light-yellow:  #fbf1a9;
-  --purple:  #5e2ca5;
-  --light-purple:  #a463f2;
-  --dark-pink:  #d5008f;
+  --dark-red: #e7040f;
+  --red: #ff4136;
+  --light-red: #ff725c;
+  --orange: #d05e25;
+  --gold: #ffb700;
+  --yellow: #ffd700;
+  --light-yellow: #fbf1a9;
+  --purple: #5e2ca5;
+  --light-purple: #a463f2;
+  --dark-pink: #d5008f;
   --hot-pink: #ff41b4;
-  --pink:  #ff80cc;
-  --light-pink:  #ffa3d7;
-  --dark-green:  #007459;
-  --green:  #19a974;
-  --light-green:  #C7FFDF;
-  --lightest-blue:  #E1F4FB;
-  --washed-blue:  #f6fffe;
-  --washed-green:  #E1F8EA;
-  --washed-yellow:  #fffceb;
-  --washed-red:  #ffdfdf;
+  --pink: #ff80cc;
+  --light-pink: #ffa3d7;
+  --dark-green: #007459;
+  --green: #19a974;
+  --light-green: #c7ffdf;
+  --lightest-blue: #e1f4fb;
+  --washed-blue: #f6fffe;
+  --washed-green: #e1f8ea;
+  --washed-yellow: #fffceb;
+  --washed-red: #ffdfdf;
 }
