removes upload image on  mobile device and only has camera from this mobile users can access both their camera and their files relates #131

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -163,6 +163,16 @@ input:checked + .age {
   background-repeat: no-repeat;
 }
 
+@media only screen
+  and (min-device-width : 320px)
+  and (max-device-width : 480px){
+    .upload-background{
+      background-image: url('./assets/camera.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+
+      }}
+
 .margin-minus {
   margin-top: -3rem;
 }
