removes trailing comma relats #131

--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -19,12 +19,12 @@
   <p><span style="font-weight: bold;">Age: </span>{{dogAge}}</p>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Health</h3>
-  <p><span style="font-weight: bold;">Medical details: </span>{{#each medicalDetails}}<span>{{this}}, </span>{{/each}}</p>
+  <p><span style="font-weight: bold;">Medical details: </span>{{#each medicalDetails}}<span>{{this}}</span>{{/each}}</p>
   <p><span style="font-weight: bold;">Last visit to the vet: </span>{{lastVetVisit}}</p>
   <p><span style="font-weight: bold;">Other health notes: </span>{{otherHealthNotes}}</p>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Personality</h3>
-  <p><span style="font-weight: bold;">Personality traits: </span>{{#each personalityTraits}}<span >{{this}}, </span>{{/each}}</p>
+  <p><span style="font-weight: bold;">Personality traits: </span>{{#each personalityTraits}}<span >{{this}}</span>{{/each}}</p>
   <p><span style="font-weight: bold;">Other personality notes: </span>{{otherPersonalityNotes}}</p>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">New Home</h3>
@@ -51,7 +51,7 @@
   <p><span style="font-weight: bold;">Email: </span>{{email}}</p>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Contact for fundraising</h3>
-<p><span style="font-weight: bold;">Contact Methods: </span>  {{#each fundraisingContact}} <span>{{this}}, </span>{{/each}}</p>
+<p><span style="font-weight: bold;">Contact Methods: </span>  {{#each fundraisingContact}} <span>{{this}}</span>{{/each}}</p>
 
   </article>
 </section>
