adds custom font size to thank you page and aligns text centrally makes donate button bigger relates #131

--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -1,6 +1,8 @@
 
 <section style="background-color:#E1F4FB; padding: 1rem;">
   <article style="width:80%; background-color:white; margin: 0 auto; padding: 2rem 3rem;">
+    <img  style="width:25%; padding-bottom:1rem;" src="https://cached.imagescaler.hbpl.co.uk/resize/scaleWidth/580/cached.offlinehbpl.hbpl.co.uk/news/NST/0BE880C4-BA15-C64D-59772E764EF971CE.jpg" alt="Blue Cross logo">
+
 <p>Hi, {{name}}!</p>
 <p>You have received a new rehoming enquiry.</p>
 <p>The dog, {{petName}}, has the following characteristics:</p>
