--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -51,6 +51,8 @@
   <p><span style="font-weight: bold;">Alternative phone number: </span>{{alternativeOwnerPhone}}</p>
   <p><span style="font-weight: bold;">Best time to call: </span>{{bestTimeToCall}}</p>
   <p><span style="font-weight: bold;">Email: </span>{{email}}</p>
+  <p><span style="font-weight: bold;">Address: </span>{{address}}</p>
+  <p><span style="font-weight: bold;">Postcode: </span>{{postcode}}</p>
 
   <h3 style="color:#0592D3; font-weight: bold; margin-bottom: 1px;">Contact for fundraising</h3>
 <p><span style="font-weight: bold;">Contact Methods: </span>  {{#each fundraisingContact}} <span>{{this}}</span>{{/each}}</p>
