nextclickable health fixed #131

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -53,17 +53,7 @@ button {
   height: 0.5rem;
 }
 
-input:checked + .personality {
-  background-color: #003388;
-  color: white;
-}
-
-input:checked + .health {
-  background-color: #003388;
-  color: white;
-}
-
-input:checked + .age {
+input[type='radio']:checked + label {
   background-color: #003388;
   color: white;
 }
