--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -73,7 +73,7 @@ button {
   }
 }
 
-input[type='radio']:checked + label {
+input:checked + label {
   background-color: #003388;
   color: white;
 }
@@ -214,47 +214,6 @@ input:focus {
 
 .f-custom {
   font-size: 1.5em;
-}
-
- {
-  display: block;
-  width: 100%;
-  height: 34px;
-  padding-top: 6px;
-  padding-right: 12px;
-  padding-bottom: 6px;
-  padding-left: 12px;
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #555555;
-  vertical-align: middle;
-  background-color: #ffffff;
-  border-top-width: 1px;
-  border-right-width-value: 1px;
-  border-bottom-width: 1px;
-  border-left-width-value: 1px;
-  border-top-style: solid;
-  border-right-style-value: solid;
-  border-bottom-style: solid;
-  border-left-style-value: solid;
-  border-top-color: #cccccc;
-  border-right-color-value: #cccccc;
-  border-bottom-color: #cccccc;
-  border-left-color-value: #cccccc;
-  border-image-source: none;
-  border-image-slice: 100% 100% 100% 100%;
-  border-image-width: 1 1 1 1;
-  border-image-outset: 0 0 0 0;
-  border-image-repeat: stretch stretch;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
-  transition-property: border-color, box-shadow;
-  transition-duration: 0.15s, 0.15s;
-  transition-timing-function: ease-in-out, ease-in-out;
-  transition-delay: 0s, 0s;
 }
 
 .input-lg {
