--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -13,10 +13,11 @@
   <p><span style="font-weight: bold;">Pet Name: </span>{{petName}}</p>
   <p><span style="font-weight: bold;">Cross breed: </span>{{crossBreed}}</p>
   <p><span style="font-weight: bold;">Breed: </span>{{primaryBreedType}}</p>
-  <p><span style="font-weight: bold;">Breed: </span>{{secondaryBreedType}}</p>
+  <p><span style="font-weight: bold;">Second Breed: </span>{{secondaryBreedType}}</p>
+  <p><span style="font-weight: bold;">Unknown breed information: </span>{{secondaryBreedType}}</p>
   <p><span style="font-weight: bold;">Primary reason for rehoming: </span>{{primaryReasonForRehoming}}</p>
   <p><span style="font-weight: bold;">Secondary reason for rehoming: </span>{{secondaryReasonForRehoming}}</p>
-  <p><span style="font-weight: bold;">Other reasons for rehoming: </span>{{otherReasonsForRehoming}}</p>
+  <p><span style="font-weight: bold;">Other reasons for rehoming: </span>{{unknownBreed}}</p>
   <p><span style="font-weight: bold;">Gender: </span>{{dogGender}}</p>
   <p><span style="font-weight: bold;">Age: </span>{{dogAge}}</p>
 
