adds cat branch

--- a/src/email/templates/internal-confirmation.html
+++ b/src/email/templates/internal-confirmation.html
@@ -26,10 +26,21 @@
     </h3>
     <p><span style="font-weight: bold;">Pet Name: </span>{{petName}}</p>
     <p><span style="font-weight: bold;">Cross breed: </span>{{crossBreed}}</p>
-    <p><span style="font-weight: bold;">Breed: </span>{{primaryBreedType}}</p>
     <p>
-      <span style="font-weight: bold;">Second Breed: </span
-      >{{secondaryBreedType}}
+      <span style="font-weight: bold;">Breed (if dog): </span
+      >{{primaryDogBreedType}}
+    </p>
+    <p>
+      <span style="font-weight: bold;">Second Breed (if dog): </span
+      >{{secondaryDogBreedType}}
+    </p>
+    <p>
+      <span style="font-weight: bold;">Breed (if cat): </span
+      >{{primaryCatBreedType}}
+    </p>
+    <p>
+      <span style="font-weight: bold;">Second Breed (if cat): </span
+      >{{secondaryCatBreedType}}
     </p>
     <p>
       <span style="font-weight: bold;">Unknown breed information: </span
@@ -47,7 +58,7 @@
       <span style="font-weight: bold;">Other reasons for rehoming: </span
       >{{unknownBreed}}
     </p>
-    <p><span style="font-weight: bold;">Gender: </span>{{dogGender}}</p>
+    <p><span style="font-weight: bold;">Gender: </span>{{gender}}</p>
     <p><span style="font-weight: bold;">Age: </span>{{dogAge}}</p>
 
     <h3 style="color: #0592d3; font-weight: bold; margin-bottom: 1px;">
